# murmur

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  murmur.example.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  provider_request.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
examples/: all_providers_demo.py  basic_chat.py  custom_provider.py
murmur/: __init__.py  cli.py  config.py  events.py  pipeline.py  session.py
murmur/audio/: __init__.py  capture.py  playback.py
murmur/llm/: __init__.py  base.py  openai_provider.py  openrouter_provider.py  registry.py
murmur/stt/: __init__.py  base.py  deepgram_provider.py  faster_whisper_provider.py  mock_provider.py  openai_provider.py  registry.py
murmur/tts/: __init__.py  base.py  cloud_providers.py  kokoro_provider.py  piper_provider.py  registry.py
tests/unit/: test_config.py  test_pipeline.py  test_providers.py  test_session.py
web/: index.html
